# Employee-attrition

./: README.md  Welcome.py  Welcome_old.py  data.csv  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.cache/replit/nix/: env.json
.upm/: store.json
pages/: Employee Attrition.py  Employee Number.py  Search by range.py
