[tool.poetry]
name = "repl_nix_streamlittemplate"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
vega-datasets = "^0.9.0"
altair = "^4.2.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
Pillow = "^9.4.0"
streamlit = "^1.17.0"
matplotlib = "^3.6.3"
sklearn = "^0.0.post2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
